# src/app/modules/openapi/model/top-selling-product-projection.ts
@@ -10,8 +10,8 @@
 
 
 export interface TopSellingProductProjection { 
-    productName?: string;
     productId?: number;
+    productName?: string;
     totalRevenue?: number;
     totalQuantitySold?: number;
 }
